--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,12 @@
         }
     ],
     "minimum-stability": "dev",
+    "license": "MIT",
     "require": {
-        "laravel/framework": "^5.5||~6.0||^7.0",
-        "maatwebsite/excel": "^3.1",
-        "overtrue/easy-sms": "^1.1",
+        "laravel/framework": "^5.5||~6.0||^7.0||^8.0",
         "overtrue/laravel-lang": "~3.0",
         "predis/predis": "^1.1",
-        "spatie/laravel-permission": "^3.11",
         "tymon/jwt-auth": "^1.0",
-        "yansongda/laravel-pay": "^2.2"
     },
     "autoload": {
         "psr-4": {
