--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "^5.5||~6.0||^7.0||^8.0",
         "overtrue/laravel-lang": "~3.0",
         "predis/predis": "^1.1",
-        "tymon/jwt-auth": "^1.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "autoload": {
         "psr-4": {
