--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "license": "MIT",
     "require": {
-        "laravel/framework": "^5.5||~6.0||^7.0||^8.40.0",
+        "laravel/framework": "^8.40.0",
         "overtrue/laravel-lang": "~3.0",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "^1.0"
